--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "https://graphql-social-615.herokuapp.com/",
   "browserslist": {
     "production": [
       ">0.2%",
